// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostar el componente 1`] = `
<img
  alt="product image"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`ProductImage debe de mostar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="product image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
